# Myitmo-to-telegram

./: .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml
src/: app.py  auth.py  db.py  handlers.py  models.py  run.py  yagpt_api.py
src/bot/: bot.py  handlers.py  run.py
src/myitmo_api/: app.py  cal_api.py
src/telbot/: handlers.py
